# rust-cleverbot

./: Cargo.toml  README.md
examples/: think.rs  think_about.rs
src/: cleverbot.rs  lib.rs  utils.rs
tests/: test_backlog.rs  tests.rs
